fix modal on mobile

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -55,13 +55,14 @@
   position: absolute;
   display: flex;
   flex-direction: column;;
-  right: 64px;
-  bottom: 64px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background: #eee;
   box-shadow: 8px 8px #4A4A4A;
   height: fit-content;
-  width: 334px;
-  padding: 48px 64px;
+  width: calc(100vw - 48px - 24px);
+  padding: 24px;
   color: var(--color-primary-black);
 }
 
@@ -102,5 +103,14 @@
 @media only screen and (min-width: 768px) {
   .homeContent {
     flex-direction: row;
+  }
+  .formModal {
+    left: unset;
+    top: unset;
+    right: 64px;
+    bottom: 64px;
+    width: 334px;
+    padding: 48px 64px;
+    transform: unset;
   }
 }
